Fixing header and footer alignment

--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -5,4 +5,8 @@
     height: 60px;
     line-height: 60px;
     background-color: #f5f5f5;
+    & .container {
+        padding: 0 10%;
+        margin: 0;
+    }
 }
