--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,7 +1,6 @@
 .navbar {
     width: 100%;
-    margin-bottom: 50px; 
     & .navbar-content {
-        margin: 0 10%;
+        padding: 0 10%;
     }
 }
